--- a/RomReader/App.axaml
+++ b/RomReader/App.axaml
@@ -1,6 +1,12 @@
 <Application xmlns="https://github.com/avaloniaui"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:local="clr-namespace:RomReader"
              x:Class="RomReader.App">
+    <Application.DataTemplates>
+        <local:ViewLocator/>
+    </Application.DataTemplates>
+    
+    
     <Application.Styles>
         <FluentTheme Mode="Light"/>
     </Application.Styles>
