--- a/RomReader/Views/RomListView.axaml
+++ b/RomReader/Views/RomListView.axaml
@@ -2,11 +2,12 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:local="clr-namespace:RomReader.Views"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:Class="RomReader.Views.RomListView">
     <Grid ColumnDefinitions="2*,Auto,6*" RowDefinitions="100*">
-        <ListBox Items="{Binding Roms}" VerticalAlignment="Stretch">
-            <ListBox.ItemTemplate>
+        <ListBox Name="RomListBox" Items="{Binding Roms}" VerticalAlignment="Stretch" SelectedItem="{Binding SelectedRomFile}">
+            <!--<ListBox.ItemTemplate>
                 <DataTemplate>
                     <Border Background="Gray" Padding="4">
                         <Grid ColumnDefinitions="5*,5*" RowDefinitions="5*,5*">
@@ -15,9 +16,14 @@
                         </Grid>
                     </Border>
                 </DataTemplate>
-            </ListBox.ItemTemplate>
+            </ListBox.ItemTemplate>-->
         </ListBox>
         <Border Grid.Column="1" BorderBrush="Black" BorderThickness="1,0,0,0" Background="{x:Null}"/>
+        
+        <StackPanel Grid.Column="2">
+            <Image Width="400" Source="{Binding SelectedRomFile.Cover}"></Image>
+        </StackPanel>
+        
     </Grid>
     
     
