--- a/RomReader/Views/RomListView.axaml
+++ b/RomReader/Views/RomListView.axaml
@@ -6,22 +6,30 @@
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:Class="RomReader.Views.RomListView">
     <Grid ColumnDefinitions="2*,Auto,6*" RowDefinitions="100*">
-        <ListBox Name="RomListBox" Items="{Binding Roms}" VerticalAlignment="Stretch" SelectedItem="{Binding SelectedRomFile}">
-            <!--<ListBox.ItemTemplate>
-                <DataTemplate>
-                    <Border Background="Gray" Padding="4">
-                        <Grid ColumnDefinitions="5*,5*" RowDefinitions="5*,5*">
-                            <TextBlock Text="{Binding Title}" Grid.ColumnSpan="2"></TextBlock>
-                            <TextBlock Grid.Row="1" Grid.Column="0" Text="{Binding ConsoleType}"></TextBlock>
-                        </Grid>
-                    </Border>
-                </DataTemplate>
-            </ListBox.ItemTemplate>-->
-        </ListBox>
-        <Border Grid.Column="1" BorderBrush="Black" BorderThickness="1,0,0,0" Background="{x:Null}"/>
+        <ListBox Name="RomListBox" Items="{Binding Roms}" VerticalAlignment="Stretch" SelectedItem="{Binding SelectedRomFile}"/>
+
+        <GridSplitter Grid.Column="1" HorizontalAlignment="Right" VerticalAlignment="Stretch" Background="Black" ResizeBehavior="PreviousAndNext"></GridSplitter>
         
         <StackPanel Grid.Column="2">
-            <Image Width="400" Source="{Binding SelectedRomFile.Cover}"></Image>
+            <TabControl>
+                <TabItem Header="ROM Info">
+                    <Grid ColumnDefinitions="5*,5*" RowDefinitions="Auto, Auto, Auto, *">
+                        <TextBlock Grid.Column="0" Grid.Row="0">Title:</TextBlock>
+                        <TextBlock Grid.Column="0" Grid.Row="1">Console:</TextBlock>
+                        <TextBlock Grid.Column="0" Grid.Row="2">ROM Type:</TextBlock>
+                        
+                        <TextBlock Grid.Column="1" Grid.Row="0" Text="{Binding SelectedRomFile.RomFile.Title}"/>
+                        <TextBlock Grid.Column="1" Grid.Row="1" Text="{Binding SelectedRomFile.RomFile.ConsoleTypeString}"/>
+                        <TextBlock Grid.Column="1" Grid.Row="2" Text="{Binding SelectedRomFile.RomFile.ConsoleRomPair.FileType}"/>
+                     
+                    </Grid>
+                </TabItem>
+                    
+                <TabItem Header="Game Info"></TabItem>
+                <TabItem Header="Box Art">
+                    <Image Width="400" Source="{Binding SelectedRomFile.Cover}"></Image>
+                </TabItem>
+            </TabControl>
         </StackPanel>
         
     </Grid>
